--- a/M3U_Live_And_Record.html
+++ b/M3U_Live_And_Record.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enregistrer M3U en direct</title>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+    <style>
+        #video {
+            max-width: 100%;
+            display: none; /* Initially hidden */
+        }
+    </style>
 </head>
 <body>
     <h1>Enregistrer M3U en direct</h1>
@@ -15,22 +21,85 @@
         <label for="outputName">Nom du fichier de sortie:</label>
         <input type="text" id="outputName" name="outputName" required>
         <br>
-        <button type="button" onclick="startRecording()">Enregistrer</button>
-        <button type="button" onclick="stopRecording()">Stop</button>
+        <label for="recordCheckbox">Enregistrer:</label>
+        <input type="checkbox" id="recordCheckbox" name="recordCheckbox">
+        <br>
+        <label for="playerCheckbox">Afficher le lecteur:</label>
+        <input type="checkbox" id="playerCheckbox" name="playerCheckbox">
+        <br>
+        <button type="button" onclick="start()">Démarrer</button>
+        <button type="button" onclick="stop()">Arrêter</button>
     </form>
     <p id="status"></p>
     <video id="video" controls></video>
+    <div>
+        <label for="widthSlider">Largeur: </label>
+        <input type="range" id="widthSlider" min="100" max="1920" value="640">
+        <span id="widthValue">640</span> px
+        <br>
+        <label for="heightSlider">Hauteur: </label>
+        <input type="range" id="heightSlider" min="100" max="1080" value="360">
+        <span id="heightValue">360</span> px
+    </div>
     <script>
         let mediaRecorder;
         let recordedChunks = [];
         let video = document.getElementById('video');
         let hls;
+        let isRecording = false;
 
-        async function startRecording() {
+        // Load saved settings from localStorage
+        document.getElementById('recordCheckbox').checked = JSON.parse(localStorage.getItem('recordCheckbox')) || false;
+        document.getElementById('playerCheckbox').checked = JSON.parse(localStorage.getItem('playerCheckbox')) || false;
+        const savedWidth = localStorage.getItem('videoWidth');
+        const savedHeight = localStorage.getItem('videoHeight');
+        if (savedWidth) {
+            video.style.width = `${savedWidth}px`;
+            document.getElementById('widthSlider').value = savedWidth;
+            document.getElementById('widthValue').innerText = savedWidth;
+        }
+        if (savedHeight) {
+            video.style.height = `${savedHeight}px`;
+            document.getElementById('heightSlider').value = savedHeight;
+            document.getElementById('heightValue').innerText = savedHeight;
+        }
+
+        // Update width and save to localStorage
+        document.getElementById('widthSlider').addEventListener('input', function() {
+            const width = this.value;
+            video.style.width = `${width}px`;
+            document.getElementById('widthValue').innerText = width;
+            localStorage.setItem('videoWidth', width);
+        });
+
+        // Update height and save to localStorage
+        document.getElementById('heightSlider').addEventListener('input', function() {
+            const height = this.value;
+            video.style.height = `${height}px`;
+            document.getElementById('heightValue').innerText = height;
+            localStorage.setItem('videoHeight', height);
+        });
+
+        // Save checkbox states to localStorage
+        document.getElementById('recordCheckbox').addEventListener('change', function() {
+            localStorage.setItem('recordCheckbox', this.checked);
+        });
+        document.getElementById('playerCheckbox').addEventListener('change', function() {
+            localStorage.setItem('playerCheckbox', this.checked);
+            video.style.display = this.checked ? 'block' : 'none';
+        });
+
+        // Initialize playerCheckbox display setting
+        if (document.getElementById('playerCheckbox').checked) {
+            video.style.display = 'block';
+        }
+
+        function start() {
             const m3uUrl = document.getElementById('m3uUrl').value;
-            const outputName = document.getElementById('outputName').value;
-            document.getElementById('status').innerText = 'Chargement du flux...';
+            const recordCheckbox = document.getElementById('recordCheckbox').checked;
+            const playerCheckbox = document.getElementById('playerCheckbox').checked;
 
+            document.getElementById('status').innerText = 'Chargement du flux...';
             recordedChunks = []; // Reset recorded chunks for new recording
 
             if (Hls.isSupported()) {
@@ -42,44 +111,23 @@
                 hls.attachMedia(video);
                 hls.on(Hls.Events.MANIFEST_PARSED, function () {
                     document.getElementById('status').innerText = 'Lecture du flux...';
-                    video.play();
+                    if (playerCheckbox) {
+                        video.play();
+                    }
                 });
 
-                video.addEventListener('canplay', () => {
-                    const stream = video.captureStream();
-                    mediaRecorder = new MediaRecorder(stream, { mimeType: 'video/webm; codecs=vp9' });
-
-                    mediaRecorder.ondataavailable = function(event) {
-                        if (event.data.size > 0) {
-                            recordedChunks.push(event.data);
-                        }
-                    };
-
-                    mediaRecorder.onstop = function() {
-                        if (recordedChunks.length) {
-                            const blob = new Blob(recordedChunks, { type: 'video/webm' });
-                            const url = URL.createObjectURL(blob);
-                            const a = document.createElement('a');
-                            a.style.display = 'none';
-                            a.href = url;
-                            a.download = outputName + '.mp4';
-                            document.body.appendChild(a);
-                            a.click();
-                            window.URL.revokeObjectURL(url);
-                            document.body.removeChild(a);
-                            document.getElementById('status').innerText = 'Enregistrement terminé.';
-                        }
-                    };
-
-                    mediaRecorder.start();
-                    document.getElementById('status').innerText = 'Enregistrement en cours...';
-                });
+                if (recordCheckbox) {
+                    video.addEventListener('canplay', startRecording);
+                    isRecording = true;
+                }
 
             } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
                 video.src = m3uUrl;
                 video.addEventListener('loadedmetadata', function() {
                     document.getElementById('status').innerText = 'Lecture du flux...';
-                    video.play();
+                    if (playerCheckbox) {
+                        video.play();
+                    }
                 });
                 document.getElementById('status').innerText = 'HLS non supporté dans ce navigateur.';
             } else {
@@ -87,21 +135,58 @@
             }
         }
 
-        function stopRecording() {
-            if (mediaRecorder && mediaRecorder.state === 'recording') {
-                mediaRecorder.stop();
-                video.pause();
-                if (hls) {
-                    hls.destroy();
+        function startRecording() {
+            const stream = video.captureStream();
+            mediaRecorder = new MediaRecorder(stream, { mimeType: 'video/webm; codecs=vp9' });
+
+            mediaRecorder.ondataavailable = function(event) {
+                if (event.data.size > 0) {
+                    recordedChunks.push(event.data);
                 }
-                document.getElementById('status').innerText = 'Enregistrement arrêté.';
+            };
+
+            mediaRecorder.onstop = saveRecording;
+            mediaRecorder.start(1000); // Capture chunks every second
+
+            document.getElementById('status').innerText = 'Enregistrement en cours...';
+            video.removeEventListener('canplay', startRecording);
+        }
+
+        function stop() {
+            if (isRecording && mediaRecorder && mediaRecorder.state === 'recording') {
+                mediaRecorder.stop();
+                isRecording = false;
+            }
+            video.pause();
+            if (hls) {
+                hls.destroy();
+            }
+            document.getElementById('status').innerText = 'Arrêté.';
+        }
+
+        function saveRecording() {
+            if (recordedChunks.length) {
+                const blob = new Blob(recordedChunks, { type: 'video/webm' });
+                const outputName = document.getElementById('outputName').value + '.mp4';
+                const url = URL.createObjectURL(blob);
+                const a = document.createElement('a');
+                a.style.display = 'none';
+                a.href = url;
+                a.download = outputName;
+                document.body.appendChild(a);
+                a.click();
+                window.URL.revokeObjectURL(url);
+                document.body.removeChild(a);
+                document.getElementById('status').innerText = 'Enregistrement terminé.';
             }
         }
 
         window.addEventListener('beforeunload', (event) => {
-            if (mediaRecorder && mediaRecorder.state === 'recording') {
+            if (isRecording && mediaRecorder && mediaRecorder.state === 'recording') {
+                event.preventDefault();
                 mediaRecorder.stop();
-                event.returnValue = 'Enregistrement en cours. Êtes-vous sûr de vouloir quitter ?'; // Prompt user before leaving
+                saveRecording();
+                event.returnValue = '';
             }
         });
     </script>
