--- a/Text_Edit.html
+++ b/Text_Edit.html
@@ -1,152 +1,261 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Éditeur de texte</title>
+    <title>Éditeur de Texte Avancé</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+#toolbar {
+    background-color: #f1f1f1;
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+    display: flex;
+    flex-wrap: wrap; /* Permet le passage à la ligne pour les éléments si nécessaire */
+}
+
+#toolbar button, #toolbar input[type="color"], #toolbar select, #toolbar input[type="file"] {
+    margin-right: 5px;
+    flex: 1; /* Permet aux éléments de s'étendre pour utiliser l'espace disponible */
+    max-width: 100%; /* Assure que les éléments ne dépassent pas de l'écran */
+}
+
+#editor {
+    width: 100%;
+    height: 300px; /* Définir une hauteur fixe */
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    padding: 10px;
+    overflow-y: auto; /* Activer le défilement vertical */
+    overflow-wrap: break-word;
+    white-space: pre-wrap;
+    margin-bottom: 10px;
+    background-color: #fff;
+    text-align: left; /* Alignement par défaut */
+}
+
+#description {
+    width: 100%;
+    height: 150px; /* Définir une hauteur fixe */
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+    white-space: pre-wrap;
+    margin-bottom: 10px;
+    background-color: #f9f9f9;
+    overflow-y: auto; /* Activer le défilement vertical */
+    resize: vertical; /* Permettre le redimensionnement vertical */
+}
+
+/* Media queries pour rendre la mise en page réactive */
+@media (max-width: 768px) {
+    #toolbar {
+        flex-direction: column; /* Empiler les éléments du toolbar verticalement sur les petits écrans */
+    }
+
+    #toolbar button, #toolbar input[type="color"], #toolbar select, #toolbar input[type="file"] {
+        margin-right: 0;
+        margin-bottom: 5px; /* Espacement entre les éléments sur petits écrans */
+    }
+}
+
+        .underline { text-decoration: underline; }
+        .strikethrough { text-decoration: line-through; }
+        .flame {
+            color: red;
+            text-shadow: 0 0 5px orange, 0 0 10px red, 0 0 15px orange, 0 0 20px yellow;
+            animation: flame 1s infinite;
         }
-        #toolbar {
-            background-color: #f1f1f1;
-            padding: 10px;
-            border-bottom: 1px solid #ccc;
+        @keyframes flame {
+            0% { text-shadow: 0 0 5px orange, 0 0 10px red, 0 0 15px orange, 0 0 20px yellow; }
+            50% { text-shadow: 0 0 10px red, 0 0 15px orange, 0 0 20px yellow, 0 0 25px red; }
+            100% { text-shadow: 0 0 5px orange, 0 0 10px red, 0 0 15px orange, 0 0 20px yellow; }
         }
-        #toolbar button {
-            margin-right: 5px;
+        .shadow {
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
         }
-        #editor {
-            width: 100%;
-            height: 300px;
-            border: 1px solid #ccc;
-            box-sizing: border-box;
+        .highlight {
+            background-color: yellow;
         }
-        #description {
-            width: 100%;
-            height: 150px;
-            margin-top: 10px;
-            box-sizing: border-box;
-        }
+        .font-size-1 { font-size: 10px; }
+        .font-size-2 { font-size: 14px; }
+        .font-size-3 { font-size: 18px; }
+        .font-size-4 { font-size: 24px; }
+        .font-size-5 { font-size: 32px; }
+        .align-left { text-align: left; }
+        .align-center { text-align: center; }
+        .align-right { text-align: right; }
     </style>
 </head>
 <body>
     <div id="toolbar">
-        <button onclick="formatText('bold')">Gras</button>
-        <button onclick="formatText('italic')">Italique</button>
+        <button onclick="applyBold()">Gras</button>
+        <button onclick="applyItalic()">Italique</button>
+        <button onclick="applyUnderline()">Souligner</button>
+        <button onclick="applyStrikethrough()">Barré</button>
+        <button onclick="resetText()">Réinitialiser</button>
         <button onclick="alignText('left')">Aligner à gauche</button>
         <button onclick="alignText('center')">Centrer</button>
         <button onclick="alignText('right')">Aligner à droite</button>
-        <button onclick="saveContent()">Sauvegarder</button>
-        <button onclick="loadContent()">Charger</button>
         <button onclick="generateDescription()">Générer Description</button>
         <button onclick="applyDescription()">Appliquer Description</button>
+        <input type="color" id="colorPicker" onchange="updateColor()">
+        <select id="effectPicker" onchange="updateEffect()">
+            <option value="none">Effets</option>
+            <option value="flame">Flammes</option>
+            <option value="shadow">Ombre</option>
+            <option value="highlight">Surbrillance</option>
+        </select>
+        <select id="fontSizePicker" onchange="updateFontSize()">
+            <option value="none">Taille</option>
+            <option value="font-size-1">Petite</option>
+            <option value="font-size-2">Moyenne</option>
+            <option value="font-size-3">Grande</option>
+            <option value="font-size-4">Très Grande</option>
+            <option value="font-size-5">Extra Grande</option>
+        </select>
+        <button onclick="saveAsJSON()">Sauvegarder en JSON</button>
+        <input type="file" id="loadFile" accept=".json" onchange="loadFromJSON(event)">
     </div>
-    <iframe id="editor" srcdoc="<html><body contenteditable='true' style='margin: 0; padding: 10px;'></body></html>"></iframe>
-    <textarea id="description" placeholder="Description des styles appliqués ici..."></textarea>
+
+    <div id="editor" contenteditable="true"></div>
+    <textarea id="description"></textarea>
 
     <script>
-        function getDocument() {
-            return document.getElementById('editor').contentDocument ||
-                   document.getElementById('editor').contentWindow.document;
-        }
-
-        function formatText(command) {
-            const doc = getDocument();
-            doc.execCommand(command, false, null);
-        }
-
-        function alignText(alignment) {
-            const doc = getDocument();
-            doc.execCommand('justify' + alignment, false, null);
-        }
-
-        function saveContent() {
-            const doc = getDocument();
-            const content = doc.body.innerHTML;
-            document.getElementById('description').value = content;
-        }
-
-        function loadContent() {
-            const doc = getDocument();
-            const content = document.getElementById('description').value;
-            doc.body.innerHTML = content;
-        }
+        const editor = document.getElementById('editor');
+        const description = document.getElementById('description');
+        const colorPicker = document.getElementById('colorPicker');
+        const effectPicker = document.getElementById('effectPicker');
+        const fontSizePicker = document.getElementById('fontSizePicker');
 
         function generateDescription() {
-            const doc = getDocument();
-            const description = [];
-            const elements = doc.body.querySelectorAll('*');
+            let desc = '';
+            const elements = editor.childNodes;
+            let currentLine = 1;
 
             elements.forEach(element => {
-                const tag = element.tagName.toLowerCase();
-                let styles = [];
-
-                if (element.style.fontWeight === 'bold') styles.push('gras');
-                if (element.style.fontStyle === 'italic') styles.push('italique');
-                if (element.style.textAlign) styles.push('aligné à ' + element.style.textAlign);
-
-                if (styles.length > 0) {
-                    description.push(`<${tag}> ${styles.join(', ')} </${tag}>`);
+                if (element.nodeType === Node.TEXT_NODE) {
+                    desc += `Ligne ${currentLine}: ${element.textContent.trim()} EndOfLine\n`;
+                } else if (element.nodeType === Node.ELEMENT_NODE) {
+                    desc += `Ligne ${currentLine}: <div style="text-align:${element.style.textAlign}">${element.innerHTML}</div> EndOfLine\n`;
                 }
+                currentLine++;
             });
 
-            document.getElementById('description').value = description.join('\n');
+            description.value = desc.trim();
         }
 
         function applyDescription() {
-            const doc = getDocument();
-            const descriptionText = document.getElementById('description').value;
-            const lines = descriptionText.split('\n');
-
-            // Clear existing content
-            doc.body.innerHTML = '';
+            editor.innerHTML = '';
+            const lines = description.value.split('\n');
 
             lines.forEach(line => {
-                if (line.trim() === '') return;
-
-                // Parse the description line
-                const matches = line.match(/<(.*?)> (.*?) <\/\1>/);
-                if (matches) {
-                    const tag = matches[1];
-                    const styles = matches[2].split(', ');
-
-                    // Create a new element
-                    const element = doc.createElement(tag);
-                    if (styles.includes('gras')) element.style.fontWeight = 'bold';
-                    if (styles.includes('italique')) element.style.fontStyle = 'italic';
-                    const alignStyle = styles.find(style => style.startsWith('aligné à '));
-                    if (alignStyle) element.style.textAlign = alignStyle.replace('aligné à ', '');
-
-                    // Append the new element to the body
-                    doc.body.appendChild(element);
+                if (line.startsWith('Ligne ')) {
+                    const content = line.split(': ')[1].replace(' EndOfLine', '');
+                    const div = document.createElement('div');
+                    const textAlign = content.match(/text-align:(left|center|right)/);
+                    if (textAlign) {
+                        div.style.textAlign = textAlign[1];
+                    }
+                    div.innerHTML = content.replace(/<div style="text-align:(left|center|right)">|<\/div>/g, '');
+                    editor.appendChild(div);
                 }
             });
         }
 
-        function enableSelection() {
-            const doc = getDocument();
-            doc.body.addEventListener('mouseup', function() {
-                const selection = doc.getSelection().toString();
-                if (selection) {
-                    console.log('Texte sélectionné:', selection);
-                }
-            });
+        function alignText(alignment) {
+            document.execCommand('justify' + alignment.charAt(0).toUpperCase() + alignment.slice(1));
+            generateDescription();
         }
 
-        // Initialisation de l'éditeur
-        const doc = getDocument();
-        doc.designMode = 'on';
+        function applyBold() {
+            document.execCommand('bold');
+            generateDescription();
+        }
 
-        // Mise à jour automatique de la description lorsque l'utilisateur édite le contenu
-        doc.addEventListener('input', function() {
-            saveContent(); // Mise à jour de la description à chaque modification
-        });
+        function applyItalic() {
+            document.execCommand('italic');
+            generateDescription();
+        }
 
-        // Activer la sélection de texte
-        enableSelection();
+        function applyUnderline() {
+            document.execCommand('underline');
+            generateDescription();
+        }
+
+        function applyStrikethrough() {
+            document.execCommand('strikeThrough');
+            generateDescription();
+        }
+
+        function resetText() {
+            editor.innerHTML = '';
+        }
+
+        function updateColor() {
+            document.execCommand('foreColor', false, colorPicker.value);
+            generateDescription();
+        }
+
+        function updateEffect() {
+            const effect = effectPicker.value;
+            const selection = window.getSelection();
+            if (selection.rangeCount > 0) {
+                const range = selection.getRangeAt(0);
+                const selectedText = range.toString();
+                const span = document.createElement('span');
+                span.textContent = selectedText;
+                span.className = effect;
+                range.deleteContents();
+                range.insertNode(span);
+                generateDescription();
+            }
+        }
+
+        function updateFontSize() {
+            const fontSize = fontSizePicker.value;
+            const selection = window.getSelection();
+            if (selection.rangeCount > 0) {
+                const range = selection.getRangeAt(0);
+                const selectedText = range.toString();
+                const span = document.createElement('span');
+                span.textContent = selectedText;
+                span.className = fontSize;
+                range.deleteContents();
+                range.insertNode(span);
+                generateDescription();
+            }
+        }
+
+        function saveAsJSON() {
+            const data = { description: description.value };
+            const blob = new Blob([JSON.stringify(data, null, 2)], { type: 'application/json' });
+            const url = URL.createObjectURL(blob);
+            const a = document.createElement('a');
+            a.href = url;
+            a.download = 'description.json';
+            a.click();
+            URL.revokeObjectURL(url);
+        }
+
+        function loadFromJSON(event) {
+            const file = event.target.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = function(e) {
+                    const data = JSON.parse(e.target.result);
+                    if (data.description) {
+                        description.value = data.description;
+                        applyDescription();
+                    }
+                };
+                reader.readAsText(file);
+            }
+        }
     </script>
 </body>
 </html>
