--- a/Index2025.html
+++ b/Index2025.html
@@ -27,64 +27,94 @@
     <div id="response"></div>
 
     <script>
-        const apiDevKey = 'Yn_AsM6V0Rv-b-5uDJu4YvqGTQfnAp7K';
-        const username = 'Thunder2024';
-        const password = 'TypeYourMessage2024';
+        const apiDevKey = 'sCoRRqMCgvCYl6iZm4P5_pH-BxSgFvEe';
+        const username = 'Thunder2025';
+        const password = 'Thunder2024$';
+        const serverUrl = 'https://thunderproxy.glitch.me'; // Mettez ici l'URL de votre serveur Glitch
 
-        const serverUrl = 'https://thunderproxy.glitch.me'; // Remplacez ceci par l'URL de votre serveur
-
-        async function fetchWithProxy(endpoint, method = 'POST', body = {}) {
+        async function getUserKey() {
             try {
-                const response = await fetch(`${serverUrl}${endpoint}`, {
-                    method,
+                const response = await fetch(`${serverUrl}/api/pastebin/api/api_login.php`, {
+                    method: 'POST',
                     headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
-                    body: new URLSearchParams({ ...body, api_dev_key: apiDevKey, api_user_name: username, api_user_password: password }),
+                    body: new URLSearchParams({
+                        api_dev_key: apiDevKey,
+                        api_user_name: username,
+                        api_user_password: password,
+                    }),
                 });
 
-                const data = await response.text();
-                if (!response.ok) throw new Error(data);
-                return data;
+                const userKey = await response.text();
+                if (!response.ok || userKey.startsWith('Bad API request')) {
+                    throw new Error('Failed to authenticate: ' + userKey);
+                }
+
+                return userKey;
             } catch (error) {
                 document.getElementById('response').textContent = 'Error: ' + error.message;
-                console.error('Fetch error:', error);
+                throw error;
             }
         }
 
         async function createPaste() {
-            const title = document.getElementById('title').value;
-            const content = document.getElementById('content').value;
+            try {
+                const userKey = await getUserKey();
+                const title = document.getElementById('title').value;
+                const content = document.getElementById('content').value;
 
-            const data = await fetchWithProxy('/api/api_post.php', 'POST', {
-                api_option: 'paste',
-                api_paste_code: content,
-                api_paste_name: title,
-                api_paste_expire_date: 'N',
-                api_paste_format: 'text'
-            });
+                const data = await fetch(`${serverUrl}/api/pastebin/api/api_post.php`, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+                    body: new URLSearchParams({
+                        api_dev_key: apiDevKey,
+                        api_user_key: userKey,
+                        api_option: 'paste',
+                        api_paste_code: content,
+                        api_paste_name: title,
+                        api_paste_expire_date: 'N',
+                        api_paste_format: 'text',
+                    }),
+                });
 
-            document.getElementById('response').textContent = 'Paste Created Successfully: ' + data;
+                const result = await data.text();
+                document.getElementById('response').textContent = 'Paste Created Successfully: ' + result;
+            } catch (error) {
+                document.getElementById('response').textContent = 'Error: ' + error.message;
+            }
         }
 
         async function deletePaste() {
-            const pasteKey = document.getElementById('pasteKey').value;
+            try {
+                const userKey = await getUserKey();
+                const pasteKey = document.getElementById('pasteKey').value;
 
-            if (!pasteKey) {
-                document.getElementById('response').textContent = 'Please provide a paste key to delete.';
-                return;
+                if (!pasteKey) {
+                    document.getElementById('response').textContent = 'Please provide a paste key to delete.';
+                    return;
+                }
+
+                const data = await fetch(`${serverUrl}/api/pastebin/api/api_post.php`, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+                    body: new URLSearchParams({
+                        api_dev_key: apiDevKey,
+                        api_user_key: userKey,
+                        api_option: 'delete',
+                        api_paste_key: pasteKey,
+                    }),
+                });
+
+                const result = await data.text();
+                document.getElementById('response').textContent = 'Paste Deleted Successfully: ' + result;
+                loadPublicPasteTitles();
+            } catch (error) {
+                document.getElementById('response').textContent = 'Error: ' + error.message;
             }
-
-            const data = await fetchWithProxy('/api/api_post.php', 'POST', {
-                api_option: 'delete',
-                api_paste_key: pasteKey
-            });
-
-            document.getElementById('response').textContent = 'Paste Deleted Successfully: ' + data;
-            loadPublicPasteTitles(); // Reload the paste titles
         }
 
         async function loadPublicPasteTitles() {
             try {
-                const response = await fetch(`${serverUrl}/api/pastebin/u/Thunder2024`);
+                const response = await fetch(`${serverUrl}/api/pastebin/u/Thunder2025`);
                 const text = await response.text();
                 const pattern = /<span class="status -public" title="Public paste, anybody can see this paste."><\/span>\s*<a href="\/([^"]+)">([^<]+)<\/a>/g;
                 let match;
@@ -105,7 +135,6 @@
                 });
             } catch (error) {
                 document.getElementById('response').textContent = 'Failed to load public paste titles.';
-                console.error('Load public paste titles error:', error);
             }
         }
 
